--- a/android-navigation/app/src/main/res/layout/navigation_activity.xml
+++ b/android-navigation/app/src/main/res/layout/navigation_activity.xml
@@ -41,10 +41,10 @@
             app:navGraph="@navigation/mobile_navigation" />
     </LinearLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:menu="@menu/nav_drawer_menu" />
+<!--    <com.google.android.material.navigation.NavigationView-->
+<!--        android:id="@+id/nav_view"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_gravity="start"-->
+<!--        app:menu="@menu/nav_drawer_menu" />-->
 </androidx.drawerlayout.widget.DrawerLayout>
