--- a/android-navigation/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android-navigation/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@id/home_dest"
         android:icon="@drawable/ic_home"
-        android:title="@string/home" />
+        android:title="home2" />
     <item
         android:id="@id/deeplink_dest"
         android:icon="@drawable/ic_android"
