--- a/android-navigation/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/android-navigation/app/src/main/res/menu/nav_drawer_menu.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@id/home_dest"
             android:icon="@drawable/ic_home"
-            android:title="@string/home" />
+            android:title="home1" />
         <item
             android:id="@id/deeplink_dest"
             android:icon="@drawable/ic_android"
